目的別にディレクトリを設置

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-current_source_minatoya.html
-erase_needless_tag.py
-info_dicts_of_reacted_people_per_posts.json
-source_without_script.html
-test.json
-todo.txt
+/data_got_by_scraping/
+/look_source/
+/my_info/
